--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId = "com.example.book_akmar"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdkVersion = 23
-        targetSdkVersion = 34
+        minSdkVersion  23
+        targetSdkVersion  34
         versionCode = 1
         versionName = "1.0"
     }
